fix - corrections in PR